Project

General

Profile

Actions

Bug #39980

closed

error from replay does not stored in rbd-mirror status

Added by Mykola Golub almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When a remote journal replay completes with an error, `ImageReplayer::handle_replay_complete` properly updates the status by calling `set_state_description` but after this it calls `on_replay_interrupted`, which will call `set_state_description` again and overwrite the error with 0 code.


Related issues 3 (0 open3 closed)

Copied to rbd - Backport #41284: mimic: error from replay does not stored in rbd-mirror statusResolvedMykola GolubActions
Copied to rbd - Backport #41285: luminous: error from replay does not stored in rbd-mirror statusResolvedMykola GolubActions
Copied to rbd - Backport #41286: nautilus: error from replay does not stored in rbd-mirror statusResolvedMykola GolubActions
Actions #1

Updated by Mykola Golub almost 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 28179
Actions #2

Updated by Mykola Golub over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41284: mimic: error from replay does not stored in rbd-mirror status added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41285: luminous: error from replay does not stored in rbd-mirror status added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41286: nautilus: error from replay does not stored in rbd-mirror status added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF