rbd-mirror: don't overwrite status error returned by replay

Fixes: https://tracker.ceph.com/issues/39980
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit c06ebf0c075e0533149572fde6c203ab22495cf6)